<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_Back_Detail"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/halaman_about"
            android:textColor="@color/color_004790"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/alwiyahya"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/txtAbout"
        android:text="@string/alwi_yahya_muljabar"
        android:textStyle="bold" />

    <TextView
        style="@style/txtAbout"
        android:text="@string/alwizero404_gmail_com"
        android:textStyle="normal"
        android:layout_marginTop="8dp"/>

</LinearLayout>